objects/USA_Objectives_Summary__c.object
<CustomObject>
    <fields>
        <fullName>USA_BOM_Achieved__c</fullName>
        <label>BOM Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Distributor__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Email_Tree__c</fullName>
        <formula>Owner:User.Email &amp; &quot; -&gt; &quot; &amp; IF(ISBLANK(Owner:User.Manager.Email),&quot;&quot;, Owner:User.Manager.Email &amp; &quot; -&gt; &quot;) &amp; 
IF(ISBLANK(Owner:User.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp;
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp;
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp;
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;) &amp;
IF(ISBLANK(Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email), &quot;&quot;, Owner:User.Manager.Manager.Manager.Manager.Manager.Manager.Email &amp; &quot; -&gt; &quot;)</formula>
        <label>Email Tree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Goal__c</fullName>
        <label>Goal</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp;  Owner:User.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_No_Response__c</fullName>
        <label>No Response</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Objective__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Objectives_Achieved__c</fullName>
        <label>Objectives Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Percentage_Achieved__c</fullName>
        <label>Percentage Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Premise__c</fullName>
        <label>Premise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Target_Achieved__c</fullName>
        <label>Target Achieved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Target_Universe__c</fullName>
        <label>Target Universe</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Team__c</fullName>
        <formula>CONTAINS(USA_Email_Tree__c, $User.Email)</formula>
        <label>Team</label>
        <type>Checkbox</type>
    </fields>
    <label>Objectives Summary</label>
    <nameField>
        <label>Account Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>